<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_heat_map</name>
  <version>1.0.1</version>
  <description>TurtleBot 4 Heat Map package</description>
  <maintainer email="shanandasurjadi@gmail.com"></maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>ros2launch</depend> 
  <depend>rclpy</depend>
  <depend>datetime</depend>
  <depend>png</depend>
  <depend>math</depend>
  <depend>threading</depend>
  <depend>time</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>os</depend>
  <depend>re</depend>
  <depend>functools</depend>
  <depend>numpy</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
